    - Prevented setting negative plot costs and taxes.
    - Added a town/nation upkeep modifier to the townLevel and nationLevel settings.
      You can now adjust the cost for upkeep based upon the level of the town/nation eg. (price_town_upkeep * modifier).
    - Fixed Health regen in towns to correctly display in the Admin panel.
    - Fixed the connection to Essentials for using teleport timers.
    - Fixed an error where a player leaving town could sometimes not correctly update the old town data file.
    - Fixed a typo causing Nation levels to not load.
    - Fixed players having to relog after leaving a town before they could join another.
    - Added chests and furnaces to the switch_id's (now protected by permission flags).
    - changed the default setting for town mob removal to 'true'.
    - Added a new setting of 'cheat_protection' to prevent fly and double jump cheats.
    - Removed default_max_town_blocks from the config as it's no longer used. All block settings are now in the townLevel entry.
    - Added config.yml settings for force_explosions_on, force_monsters_on and force_fire_on. These will prevent Mayors toggling the settings.
    - Added world configs for Forced Fire,Explosions and Monsters.
    - Moved some townyworld commands the a new toggle command '/townyworld toggle claimable, usingtowny, pvp, explosion, fire and mobs.
    - Changes to protect towns not in nations from explosions during a war.
    - Added regex parsing on town and nation renaming.
    - Removed access to '/town set mayor' command for assistants.
    - Fixed '/res set mode townclaim' attempting to claim the wrong blocks.
    - Added a town hasUpkeep setting for towns. Default sets to false if using an NPC mayor, or manually configurable by server admins.
    - Added a 'Mob Spawns' indicator to the '/town' status display.
    - Cleaned up display for /town /ta and /tw.