@@ -347,3 +347,4 @@ v0.72.2:
     - Added a town hasUpkeep setting for towns. Default sets to false if using an NPC mayor, or manually configurable by server admins.
     - Added a 'Mob Spawns' indicator to the '/town' status display.
     - Cleaned up display for /town /ta and /tw.
+    - '/town set homeblock' no longer gets confused by your own towns homeblock when calculating distance to closest homeblock.
